crates/toml/tests/snapshots/invalid/ext/keys/newline-5.stderr
TOML parse error at line 2, column 2
  |
2 | 3
  |  ^
key with no value, expected `=`
